force-app/main/default/objects/Account/fields/ReasonsForDebarment__c.field-meta.xml
<CustomField>
    <fullName>ReasonsForDebarment__c</fullName>
    <description>This field is created for the debarment of recipient organizations.</description>
    <label>X_Reasons For Debarment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>