force-app/main/default/objects/Account/fields/RecipientUserLink__c.field-meta.xml
<CustomField>
    <fullName>RecipientUserLink__c</fullName>
    <formula>$Setup.GNT__GlobalConfig__c.GNT__CommunityURLDomain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_RecipientUserLink</label>
    <type>Text</type>
</CustomField>