force-app/main/default/objects/Account/fields/RequestedParentOrganization__c.field-meta.xml
<CustomField>
    <fullName>RequestedParentOrganization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pending approval, this will become the parent of your organization.</description>
    <label>Requested Parent Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>