force-app/main/default/objects/Account/fields/RiskAssessmentRequest__c.field-meta.xml
<CustomField>
    <fullName>RiskAssessmentRequest__c</fullName>
    <label>X_RiskAssessmentRequest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>