force-app/main/default/objects/Account/fields/RiskIndicator__c.field-meta.xml
<CustomField>
    <fullName>RiskIndicator__c</fullName>
    <formula>CASE( OverallRiskLevel__c,&apos;Low&apos;, IMAGE(&apos;/resource/GovGrantsImages/b-grn.png&apos;,&apos;Low&apos;), &apos;Medium&apos;, IMAGE(&apos;/resource/GovGrantsImages/b-ylw.png&apos;,&apos;Medium&apos;),&apos;High&apos;,IMAGE(&apos;/resource/GovGrantsImages/b-red.png&apos;,&apos;High&apos;),&apos;NA&apos;)+HYPERLINK(&apos;&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <type>Text</type>
</CustomField>