force-app/main/default/objects/Account/fields/Sams__c.field-meta.xml
<CustomField>
    <fullName>Sams__c</fullName>
    <description>This is the filed created to for SAMS number of a recipient organization.</description>
    <label>Sams Registration Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>