force-app/main/default/objects/Account/fields/SignatureAuthorityUser__c.field-meta.xml
<CustomField>
    <fullName>SignatureAuthorityUser__c</fullName>
    <label>X_Authorized Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>