force-app/main/default/objects/Account/fields/Signing_authority__c.field-meta.xml
<CustomField>
    <fullName>Signing_authority__c</fullName>
    <formula>Parent.PointofContactUser__r.FirstName</formula>
    <label>X_Signing authority</label>
    <type>Text</type>
</CustomField>