force-app/main/default/objects/Account/fields/StateAgency__c.field-meta.xml
<CustomField>
    <fullName>StateAgency__c</fullName>
    <formula>CASE(TEXT(Type), 
&apos;Division&apos;, Parent.Name , 
&apos;Office&apos;, Parent.Parent.Name, 
&apos;Agency&apos;, Name, 
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_State Agency</label>
    <type>Text</type>
</CustomField>