force-app/main/default/objects/Account/fields/StateAgencyAbbrevation__c.field-meta.xml
<CustomField>
    <fullName>StateAgencyAbbrevation__c</fullName>
    <formula>IF(TEXT(Type) = &apos;&apos; , Code__c , CASE(TEXT(Type), 
&apos;Division&apos;, Parent.Abbreviation__c, 
&apos;Office&apos;, Parent.Parent.Abbreviation__c , 
&apos;Agency&apos;,Abbreviation__c, 
Abbreviation__c))</formula>
    <label>X_State Agency Abbrevation</label>
    <type>Text</type>
</CustomField>