force-app/main/default/objects/Account/fields/Street2__c.field-meta.xml
<CustomField>
    <fullName>Street2__c</fullName>
    <label>Street 2</label>
    <length>55</length>
    <type>Text</type>
</CustomField>