force-app/main/default/objects/Account/fields/SupplierID__c.field-meta.xml
<CustomField>
    <fullName>SupplierID__c</fullName>
    <label>Supplier ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>