force-app/main/default/objects/Account/fields/SupplySchedule__c.field-meta.xml
<CustomField>
    <fullName>SupplySchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X_Are you in State Supply Schedule?</label>
    <type>Checkbox</type>
</CustomField>