force-app/main/default/objects/Account/fields/ThemeName__c.field-meta.xml
<CustomField>
    <fullName>ThemeName__c</fullName>
    <inlineHelpText>Refers to the theme name which is stored in Theme Config custom setting. It is applicable only for internal users.</inlineHelpText>
    <label>X_Theme Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>