force-app/main/default/objects/Account/fields/UEISam__c.field-meta.xml
<CustomField>
    <fullName>UEISam__c</fullName>
    <label>UEI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>