force-app/main/default/objects/Account/fields/UserLimit__c.field-meta.xml
<CustomField>
    <fullName>UserLimit__c</fullName>
    <label>X_UserLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>