force-app/main/default/objects/Account/fields/VendorId__c.field-meta.xml
<CustomField>
    <fullName>VendorId__c</fullName>
    <label>X_Vendor Id</label>
    <length>9</length>
    <type>Text</type>
</CustomField>