force-app/main/default/objects/Account/fields/WebsiteLink__c.field-meta.xml
<CustomField>
    <fullName>WebsiteLink__c</fullName>
    <formula>IF( CONTAINS(Website, &apos;http&apos;), HYPERLINK(Website, Website, &apos;_blank&apos;), HYPERLINK(&apos;http://&apos; &amp; Website, Website, &apos;_blank&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website</label>
    <type>Text</type>
</CustomField>