force-app/main/default/objects/Account/fields/WindowTitle__c.field-meta.xml
<CustomField>
    <fullName>WindowTitle__c</fullName>
    <formula>IF(
  IndividualAccount__c = true,
  &apos;Individual Subrecipient View&apos;,
  &apos;Organization View&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_Window Title</label>
    <type>Text</type>
</CustomField>