force-app/main/default/objects/Account/validationRules/EinValidationGranteeOrganization.validationRule-meta.xml
<ValidationRule>
    <fullName>EinValidationGranteeOrganization</fullName>
    <active>true</active>
    <description>EIN Validation For Application Form : Grantee , Bug: 474595</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(EINText__c)),
OR(
LEN(EINText__c) &lt; 9,
LEN(EINText__c) &gt; 15
))</errorConditionFormula>
    <errorMessage>Provide a valid EIN with a minimum of 9 digits and a maximum of 15 digits.</errorMessage>
</ValidationRule>