force-app/main/default/objects/Account/validationRules/ZipCode_Extension_should_be_Four_digit.validationRule-meta.xml
<ValidationRule>
    <fullName>ZipCode_Extension_should_be_Four_digit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(BillingPostalCodeExtension__c)),
OR(
NOT(ISNUMBER(BillingPostalCodeExtension__c)),
LEN(BillingPostalCodeExtension__c) != 4
)
)</errorConditionFormula>
    <errorMessage>Please Enter 4 Digit Zip Code Extension.</errorMessage>
</ValidationRule>