force-app/main/default/objects/Account/validationRules/ZipCode_should_be_max_Five_digit.validationRule-meta.xml
<ValidationRule>
    <fullName>ZipCode_should_be_max_Five_digit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(BillingPostalCode)),
OR(
NOT(ISNUMBER(BillingPostalCode)),
LEN(BillingPostalCode) != 5
)
)</errorConditionFormula>
    <errorMessage>Please Enter 5 Digit Zip Code.</errorMessage>
</ValidationRule>